// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="usd1-react-ui-input-wrapper"
  >
    <input
      class="usd1-react-ui-input usd1-react-ui-input-text usd1-react-ui-input-rounded  p-inputtext p-component"
      data-pc-name="inputtext"
      data-pc-section="root"
    />
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Input renders correctly 2`] = `ShallowWrapper {}`;

exports[`Input renders correctly 3`] = `ReactWrapper {}`;

exports[`Input renders correctly 4`] = `
LoadedCheerio {
  "0": <div
    class="usd1-react-ui-input-wrapper"
  >
    <span
      class="usd1-react-ui-input usd1-react-ui-input-number usd1-react-ui-input-rounded  p-inputnumber p-component p-inputwrapper"
      data-pc-name="inputnumber"
      data-pc-section="root"
    >
      <input
        class="p-inputnumber-input p-inputtext p-component"
        data-pc-name="inputtext"
        data-pc-section="root"
        inputmode="numeric"
        role="spinbutton"
        type="text"
        value=""
      />
    </span>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Input renders correctly 5`] = `ShallowWrapper {}`;

exports[`Input renders correctly 6`] = `ReactWrapper {}`;

exports[`Input renders correctly 7`] = `
LoadedCheerio {
  "0": <div
    class="usd1-react-ui-input-wrapper"
  >
    <textarea
      class="usd1-react-ui-input usd1-react-ui-input-textarea usd1-react-ui-input-rounded  p-inputtextarea p-inputtext p-component usd1-react-ui-input usd1-react-ui-input-textarea usd1-react-ui-input-rounded"
      data-pc-name="inputtextarea"
      data-pc-section="root"
    />
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
